# setplot

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/superpowers/specs/: 2026-05-04-streaming-integrations-design.md
scripts/: audit_bpm_normalization.py  refold_existing_bpm.py
src/setplot/: __init__.py  __main__.py  _update.py  cli.py  config.py  diagnostics.py  plotting.py  store.py
src/setplot/pipeline/: __init__.py  _decode.py  bpm.py  fingerprint.py  ingest.py  key.py  orchestrator.py  peaks.py
src/setplot/server/: app.py  events.py
src/setplot/server/auth/: __init__.py  apple.py  spotify.py
src/setplot/server/routers/: auth.py  export.py  ingest.py  library.py  media.py  preview.py
src/setplot/services/: apple_lookup.py  spotify.py
src/setplot/viewer/: index.html  set.html  viewer.html  viewer_data.json
src/setplot/viewer/static/: apple-export.js  library.js  viewer.js
tests/: conftest.py  test_cli.py  test_diagnostics.py  test_pipeline_bpm.py  test_pipeline_bpm_m4a.py  test_pipeline_decode.py  test_pipeline_fingerprint.py  test_pipeline_ingest.py  test_pipeline_key.py  test_pipeline_orchestrator.py  test_pipeline_peaks.py  test_server_ingest.py  test_server_library.py  test_server_media.py  test_store.py  test_streaming.py  test_update.py
tests/fixtures/: clip30.expected_bpm.csv  clip30.expected_key_librosa.csv
